checkpoint, crashing but it was loading with no textures a bit ago