@@ -6,24 +6,25 @@ import com.github.bsideup.jabel.Desugar;
 import net.minecraft.util.text.ITextComponent;
 import net.minecraft.util.text.TextComponentString;
 
-@Desugar public record SuggestedLabelIntellisenseAction(
+@Desugar
+public record SuggestedLabelIntellisenseAction(
         String label,
         int numBlocks
 ) implements IntellisenseAction {
     @Override
     public ITextComponent getComponent() {
-        return new TextComponentString("%s (%d)".formatted(label, numBlocks));
+        return new TextComponentString(String.format("%s (%d)", label, numBlocks));
     }
 
     @Override
     public ManipulationResult perform(IntellisenseContext context) {
         if (Label.needsQuotes(label)) {
             return context.createMutableProgramString()
-                    .replaceWordAndMoveCursorsToEnd("\"%s\" ".formatted(label))
+                    .replaceWordAndMoveCursorsToEnd(String.format("\"%s\" ", label))
                     .intoResult();
         } else {
             return context.createMutableProgramString()
-                    .replaceWordAndMoveCursorsToEnd("%s ".formatted(label))
+                    .replaceWordAndMoveCursorsToEnd(String.format("%s ", label))
                     .intoResult();
         }
     }
